/*

Copyright 2017 Continusec Pty Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

*/

syntax = "proto3";

package continusec.vds;
option go_package = "pb";


message ServerConfig {
    string server_cert_path = 1;
    string server_key_path = 2;
    string listen_bind = 3; // e.g. ":8080"
    bool insecure_http_server_for_testing = 4;
}
